--- a/code.html
+++ b/code.html
@@ -4,23 +4,23 @@
 <body>
 <section>
         <center>
-    <img src="PenguinPedia.PNG" width="50" height="40">
+    <img src="PenguinPedia.PNG" width="50" height="40"><!---Its for the logo --->
     </center>
-<header>
-<h1>Penguinpedia</h1>
-<h3>Lots of Penguin Facts!</h3>
-<a href="Contact%20ME.html">Contact Me!</a>
+<header><!---Its to creat a seperate part for the title and subtitle --->
+<h1>Penguinpedia</h1> <!---Its a Title --->
+<h3>Lots of Penguin Facts!</h3><!---Its a SubTitle --->
+<a href="Contact%20ME.html">Contact Me!</a><!---Its for the contact me page --->
     |
-<a href="Menu.html">Order Grilled Penguin!</a>   
+<a href="Menu.html">Order Grilled Penguin!</a>   <!---Its for the menu --->
 </header>
     <center>
 <img src="penguins.jfif" alt="Penguins" width="1000" >
-<img src="penguins%20in%20a%20cave.jfif"> 
+<img src="penguins%20in%20a%20cave.jfif"> <!---Its for the images --->
 <img src="penguining.jfif" alt="penguining" width="1000">   
     </center>
-<p>
+<p><!---Info --->
 Penguins are a group of aquatic flightless birds. They live almost exclusively in the Southern Hemisphere, with only one species, the Galápagos penguin, found north of the equator. Highly adapted for life in the water, penguins have countershaded dark and white plumage and flippers for swimming. Most penguins feed on krill, fish, squid and other forms of sea life which they catch while swimming underwater. They spend roughly half of their lives on land and the other half in the sea.
-    <br>
+    <br><!---Its to put breaks between the paragraphs --->
     <br>
 Although almost all penguin species are native to the Southern Hemisphere, they are not found only in cold climates, such as Antarctica. In fact, only a few species of penguin live so far south. Several species are found in the temperate zone, but one species, the Galápagos penguin, lives near the equator.
 The largest living species is the emperor penguin on average, adults are about 1.1 m tall and weigh 35 kg (77 lb). The smallest penguin species is the little blue penguin, also known as the fairy penguin, which stands around 33 cm (13 in) tall and weighs 1 kg. Among extant penguins, larger penguins inhabit colder regions, while smaller penguins are generally found in temperate or even tropical climates. Some prehistoric species attained enormous sizes, becoming as tall or as heavy as an adult human. These were not restricted to Antarctic regions; on the contrary, subantarctic regions harboured high diversity, and at least one giant penguin occurred in a region around 2,000 km south of the equator 35 mya, in a climate decidedly warmer than today.
@@ -198,7 +198,7 @@ When emperor penguin mothers lose a chick, they sometimes attempt to "steal" ano
 Conservation status
 The majority of living penguin species have declining populations. According to the IUCN Red List, their conservation statuses range from Least Concerned through to Endangered.
 </p>
- <footer>
+ <footer><!---Its to creat a seperate part for the copywrite bit --->
  <br>
   Created by <a href="http://iamawesome.com/"> Knightonfire</a> ©9-6-2020<!---Im really awesome(its true)--->
  </footer>
