--- a/code.html
+++ b/code.html
@@ -1,4 +1,4 @@
-<!Doctype.html>
+    <!Doctype.html>
 <link rel=stylesheet href="codeing.css" type="text/css">
 <title>Penguinpedia</title>
 <body>
@@ -198,7 +198,7 @@ When emperor penguin mothers lose a chick, they sometimes attempt to "steal" ano
 Conservation status
 The majority of living penguin species have declining populations. According to the IUCN Red List, their conservation statuses range from Least Concerned through to Endangered.
 </p>
- <footer><!---Its to creat a seperate part for the copywrite bit --->
+ <footer><!---Its to create a seperate part for the copywrite bit --->
  <br>
   Created by <a href="http://iamawesome.com/"> Knightonfire</a> ©9-6-2020<!---Im really awesome(its true)--->
  </footer>
