--- a/code.html
+++ b/code.html
@@ -6,7 +6,7 @@
         <center>
     <img src="PenguinPedia.PNG" width="50" height="40"><!---Its for the logo --->
     </center>
-<header><!---Its to creat a seperate part for the title and subtitle --->
+<header><!---Its to create a seperate part for the title and subtitle --->
 <h1>Penguinpedia</h1> <!---Its a Title --->
 <h3>Lots of Penguin Facts!</h3><!---Its a SubTitle --->
 <a href="Contact%20ME.html">Contact Me!</a><!---Its for the contact me page --->
